force-app/main/default/objects/MTRNS__MTRNSSettings__c/MTRNS__MTRNSSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides ability to specify custom implementations for use with Factory classes.</description>
    <label>MTRNS Settings</label>
</CustomObject>