force-app/main/default/objects/MTRNS__MTRNSSettings__c/fields/MTRNS__EnableMethodTelemetryLogging__c.field-meta.xml
<CustomField>
    <fullName>MTRNS__EnableMethodTelemetryLogging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if method entry and exit telemetry logging is included in the logs. The Org Default should be false. To grant this ability, add a custom setting per user or profile.</description>
    <inlineHelpText>This field indicates if method entry and exit telemetry logging is included in the logs. The Org Default should be false. To grant this ability, add a custom setting per user or profile.</inlineHelpText>
    <label>Enable Method Telemetry Logging</label>
    <type>Checkbox</type>
</CustomField>