force-app/main/default/objects/MTRNS__MTRNSSettings__c/fields/MTRNS__LoggingLevelsToCapture__c.field-meta.xml
<CustomField>
    <fullName>MTRNS__LoggingLevelsToCapture__c</fullName>
    <description>The Administrator populates this optional text field with the logging levels for which the system should capture logs. This setting uses the Salesforce System.LoggingLevels conventions of NONE,INFO,DEBUG,ERROR,FINE,FINER,FINEST using inclusivity.</description>
    <label>Logging Levels to Capture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>