force-app/main/default/objects/MTRNS__MTRNSSettings__c/fields/MTRNS__MaxLoggingRetryAttempts__c.field-meta.xml
<CustomField>
    <fullName>MTRNS__MaxLoggingRetryAttempts__c</fullName>
    <description>The Administrator populates this optional number field with the total number of retries the system will attempt when it encounters a deadlock trying to update the log record.</description>
    <label>Max Logging Retry Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>